got networking working with event handler shims

--- a/net/todo.txt
+++ b/net/todo.txt
@@ -15,8 +15,7 @@
 * [-] void dyad_end(dyad_Stream *stream);
 * [-] void dyad_close(dyad_Stream *stream);
 * [~] void dyad_write(dyad_Stream *stream, const void *data, int size);
-* [~] void dyad_vwritef(dyad_Stream *stream, const char *fmt, va_list args);
-* [~] void dyad_writef(dyad_Stream *stream, const char *fmt, ...);
+* [-] void dyad_writef(dyad_Stream *stream, const char *fmt, ...);
 * [-] void dyad_setTimeout(dyad_Stream *stream, double seconds);
 * [-] void dyad_setNoDelay(dyad_Stream *stream, int opt);
 * [-] int dyad_getState(dyad_Stream *stream);
